--- a/vignettes/DGEobj.utils_Workflow.Rmd
+++ b/vignettes/DGEobj.utils_Workflow.Rmd
@@ -1,25 +1,18 @@
 ---
-title: "DGEobj.utils Example Workflow"
-author: "John R. Thompson (jrt@thompsonclan.org)"
-date: '`r format.Date(Sys.Date(), "%B %d %Y")`'
-header-includes:
-- \usepackage{fancyhdr}
-- \usepackage{graphicx}
-- \pagestyle{fancy}
-- \fancyhead[LE,RO]{}
-- \fancyfoot[CO,CE]{\textit{DGEtools Workflow}}
-- \fancyfoot[LE,RO]{\thepage}
+title: "DGEobj.utils: Example Workflow"
+author: "John R. Thompson"
+date: "`r Sys.Date()`"
 output:
-  pdf_document:
-    toc: true
-    toc_depth: 4
-    number_sections: true
-    fig_width: 7
-    fig_height: 5
-fontsize: 10pt
+  rmarkdown::html_vignette:   
+    fig_caption: yes
+    number_sections: yes
+    toc: yes
+    toc_depth: 5
+vignette: >
+  %\VignetteIndexEntry{DGEobj.utils: Example Workflow}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8} 
 ---
-
-\newpage
 
 # Environment Setup
 
@@ -72,7 +65,6 @@ if (!file.exists(outputPath)) dir.create(outputPath, recursive=TRUE)
 
 ```
 
-\newpage   
 
 # Initializing a DGE object 
 
@@ -236,7 +228,7 @@ it easy for a non-technical person to provide project documentation by editing a
 templated text file.
 
 ```{r annotateFromTextFile}
-annotationFile <- system.file("GSE120804_ProjectAttributes.txt", package = "DGE.Tools2", mustWork = TRUE)
+annotationFile <- system.file("GSE120804_ProjectAttributes.txt", package = "DGE.Tools2")
 
 dgeObj <- annotateDGEobj(dgeObj, annotationFile)
 
@@ -289,7 +281,7 @@ knitr::kable(inventory(dgeObj))
 
 ```
 
-\newpage  
+  
 
 # Pre-processing
 
@@ -382,7 +374,7 @@ Dimensions after filtering for protein_coding:
 `r dim(dgeObj)`
 
 
-\newpage  
+  
 
 # DGE Analysis  
 
@@ -405,7 +397,7 @@ dgeObj <- runEdgeRNorm(dgeObj, plotFile = TRUE)
 
 ```
 
-\newpage  
+  
 
 ## Define the Model Formula  
 
@@ -436,7 +428,7 @@ dgeObj <- addItem(dgeObj, item=designMatrix,
                   overwrite=TRUE)
 ```
 
-\newpage
+
 
 ## QC: Dispersion Plot  (Move to DGEobj.plots vignette)
 
@@ -454,7 +446,7 @@ ggsave(filename=file.path(outputPath, "dispersion.png"), plot=dispPlot)
 saveRDS (dgeObj, file.path(outputPath, "dgeobj.RDS"))
 ```
 
-\newpage
+
 
 ## Check for Surrogate Variables (unaccounted for variation)
 
@@ -525,104 +517,7 @@ kable(inventory(dgeObj_SVA))
 
 ```
 
-\newpage
 
-## Data Exploration: Multi-Dimensional Scaling (Move to DGEobj.plots vignette)
-
-Principal Component Analysis is a subset of Multi-Dimensional Scaling that uses
-correlation as a distance metric.  The limma mdsPlot function yields similar
-results as PCA in terms of spatial separation.  However, the limma mds analysis
-uses an intensity-based distance metric.  Thus, since we perform MDS on log2cpm
-data, the units of the plot are also in log2cpm units.  So the scale of an MDS
-plot is more human relevant than correlation-based distance metrics.
-
-
-```{r MDSplot, eval=FALSE, echo=TRUE, warning=FALSE, message=FALSE, fig.width=5, fig.height=3.5}
-
-mdsColorBy <- "ReplicateGroup" #A_Design_ColumnName
-mdsShapeBy <- "DiseaseStatus" #A_Design_ColumnName
-mdsDims <- c(1,2) # which dimensions to plot
-top <- Inf  #sometimes useful to set to ~ signature size; see ?limma::plotMDS.
-
-
-#use color and shape with labels and labelSize
-# See ?ggplotMDS for more options
-m <- DGE.Tools2::ggplotMDS(dgeObj, colorBy = dgeObj$design[[mdsColorBy]], 
-                           shapeBy = dgeObj$design[[mdsShapeBy]], 
-                           symSize =5,
-                           labels=NULL,
-                           labelSize=3,
-                           dim.plot=mdsDims, 
-                           top = top
-)
-
-# ggplotMDS returns a list of 2.  Item 1 is the gggplot; Item 2 is the data object
-# returned by limma::plotMDS
-print(m[[1]])
-ggsave(filename= file.path(outputPath, "MDSplot.PNG"), plot=m[[1]])
-
-
-# Now let's plot the amount of variance explained by each component
-results <- MDS_var_explained(m[[2]])
-# results is a list of 3 items:
-#   1) Var Explained bar plot
-#   2) Cumulative variance explained
-#   3) The dataframe used for the plot
-
-print(results[[1]])
-ggsave(filename=file.path(outputPath, "varExplained.PNG"), plot=results[[1]])
-
-print(results[[2]])
-ggsave(filename=file.path(outputPath, "cumVarExplained.PNG"), plot=results[[2]])
-
-```
-
-\newpage  
-
-## tSNE  :  Just an example.  No new DGEtools capabilities showcased here; consider droppping. (Move to DGEobj.plots vignette)
-
-tSNE is a method to represent all variability in an experiment as a two dimensional plot.  The axes are not labeled with a scale because the scale is non-linear and not directly interpretable. 
-
-```{r tSNE,  eval=FALSE  }
-
-tsneColorBy <- "ReplicateGroup" #A_Design_ColumnName
-tsneShapeBy <- "DiseaseStatus" #A_Design_ColumnName
-perplexity <- 15  #need to try various values; start from highest value that doesn't fail and work down.
-
-
-log2cpm <- convertCounts(dgeObj$counts, unit="cpm", log=TRUE, normalize="tmm")
-set.seed(8675309)  # Jenny, I've got your number
-
-tsne <- Rtsne::Rtsne(t(log2cpm), pca=FALSE, perplexity=perplexity,
-                     check_duplicates=FALSE, max_iter=5000, verbose=FALSE)
-
-#add metadata to the tsne data structure for plotting
-#tsneDF <- data.frame(tsne$Y, species=irisUnique$Species)
-tsneDF <- data.frame(tsne$Y, colorBy=dgeObj$design[[tsneColorBy]], 
-                     shapeBy=dgeObj$design[[tsneShapeBy]])
-tsneDF[tsneColorBy] <- tsneDF$colorBy
-tsneDF[tsneShapeBy] <- tsneDF$shapeBy
-
-
-#without Labels
-tsnePlot <- ggplot(tsneDF, aes_string(x="X1", y="X2", color=tsneColorBy, shape=tsneShapeBy )) + 
-  # geom_polygon(data=createPolygons(tsneDF), aes(fill=ReplicateGroup), alpha = 0.2)+
-  geom_point(size = 5) +
-  theme_bw() +
-  theme(axis.title.x=element_blank(),
-        axis.text.x=element_blank(),
-        axis.ticks.x=element_blank(),
-        axis.title.y=element_blank(),
-        axis.text.y=element_blank(),
-        axis.ticks.y=element_blank()) +
-  ggtitle("tSNE Analysis") +
-  labs(caption = str_c("Perplexity = ", perplexity))
-printAndSave(tsnePlot, file.path(outputPath, "tSNE_Log2CPM.png"))
-
-
-```
-
-\newpage
 
 ## Run Voom and fit the model (lmfit)  
 
@@ -668,7 +563,7 @@ saveRDS (dgeObj, file.path(outputPath, "dgeobj.RDS"))
 
 ```
 
-\newpage
+
 
 ## Run contrasts  
 
@@ -735,84 +630,7 @@ saveRDS (dgeObj, file.path(outputPath, filename))
 
 ```
 
-\newpage
 
-# DGE Results Analysis     
-
-## Inspect pvalue histograms   (Move to DGEobj.plots)
-
-Pvalue histograms can reveal problems with your model.  [David Robinson has a good
-webpage describing how to interpret p-value histograms](http://varianceexplained.org/statistics/interpreting-pvalue-histogram/).
-
-```{r pvalueHistograms, eval=FALSE, echo=TRUE, warning=FALSE, message=FALSE, fig.height=3}
-
-# We need to collect a pvalue column from each topTable dataframe
-listOfTopTable <- getType(dgeObj, "topTable")
-MyPvalMatrix <- DGE.Tools2::extractCol(listOfTopTable, colName="P.Value")
-plotPvalHist (MyPvalMatrix, facetFontSize=8)
-
-```
-
-\newpage
-
-## Count Significant differential genes  (Move to DGEobj.plots)
-
-**Table 1:** No fold change threshold; p < 0.01, FDR thresholds = 0.1
-
-```{r sigGenes, eval=TRUE, echo=TRUE, warning=FALSE, message=FALSE}
-# We need a list of the topTable dataframes.  
-listOfTopTable <- getType(dgeObj, "topTable")
-knitr::kable(DGE.Tools2::summarizeSigCounts(listOfTopTable))
-
-```
-
-**Table 2:** fold change threshold = 1.5; p < 0.01, FDR thresholds = 0.1
-
-```{r sigGenes_FCthreshold, eval=TRUE, echo=TRUE, warning=FALSE, message=FALSE}
-# We need a list of the topTable dataframes.  
-listOfTopTable <- getType(dgeObj, "topTable")
-knitr::kable(DGE.Tools2::summarizeSigCounts(listOfTopTable, fcThreshold = 1.5))
-
-```
-
-\newpage
-
-##  Run a Power Analysis  (Move to DGEobj.plots)
-
-Interpretation of DGE data is improved by an understanding of the proportion of
-true positives detected as well as the degree of false postives expected.
-Traditional power analysis is unbiased with regard to intensity.  However, we
-know from experience that a 2X change in a high intensity gene is more reliable
-that a 2X change in a gene near the detection limit.  The rnapower takes the
-intensity level into consideration in estimating power in RNA-Seq data.  
-
-The depth argument in this process refers to raw counts and the default levels
-of 10, 100, 1000 correspond roughly to detection limit, middle low expression
-and median expression levels.  You'll see that estimated power increases with
-increasing intensity level.
-
-```{r runPower, eval=TRUE, echo=TRUE, warning=FALSE, message=FALSE, fig.height=6, fig.width=7}
-
-counts <- getItem(dgeObj, "counts")
-designMatrix <- getItem(dgeObj, "ReplicateGroupDesign")
-
-pwr <- runPower(counts, designMatrix)
-# result is a list of objects depending on the return argument
-# Default objects returned:
-#    PowerData: the dataframe generated
-#    ROC:  ggplot ROC curve
-#    NvP:  plots emphasizing the relationship of N to power
-print(pwr$ROC)
-ggsave(filename=file.path(outputPath, "power_ROC.PNG"), plot=pwr$ROC)
-print(pwr$NvP)
-ggsave(filename=file.path(outputPath, "power_NvP.PNG"), plot=pwr$Nvp)
-
-# printAndSave(pwr$ROC, file.path(outputPath, "power_ROC.PNG"), printFontSize = 9)
-# printAndSave(pwr$NvP, file.path(outputPath, "power_NvP.PNG"))
-
-```
-
-\newpage
 
 # Session Info
 
